--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,4 +4,8 @@
 
     <item android:id="@+id/custom"
         android:title="custom" />
+    <item android:id="@+id/add"
+        android:title="AddData"/>
+    <item android:id="@+id/add_index"
+        android:title="AddDataIndex"/>
 </menu>
