--- a/app/src/main/res/menu/menu2.xml
+++ b/app/src/main/res/menu/menu2.xml
@@ -2,4 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/insta"
         android:title="insta" />
+    <item android:id="@+id/add"
+        android:title="AddData"/>
+    <item android:id="@+id/add_index"
+        android:title="AddDataIndex"/>
 </menu>
