--- a/fbadhelper/src/main/res/layout/fb_audience_layout.xml
+++ b/fbadhelper/src/main/res/layout/fb_audience_layout.xml
@@ -18,7 +18,7 @@
         android:paddingBottom="10dp"
         android:paddingTop="10dp">
 
-        <de.hdodenhof.circleimageview.CircleImageView
+        <com.facebook.ads.AdIconView
             android:id="@+id/native_ad_icon"
             android:layout_width="40dp"
             android:layout_height="40dp"
